# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.765 2008-10-01 10:16:10 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.4.0 beta1 (2009/??/??)
 - (2008/10/02) Added service and sla preferences feature, like already exising
    user, customer and queue preferences. Can be extended by config settings.
 - (2008/10/02) Improved package manager to get info about documentation
    availabe in online repository packages.

2.3.3 (2008/10/02)
 - (2008/09/30) Fixed bug# 3335 - No user name in pdf - print of stats-report
 - (2008/09/29) Updated Italian translation, thanks to Remo Catelotti!
 - (2008/09/29) Fixed bug# 3315 - GenericAgent does not work with pending time
    reached for x units.
 - (2008/09/29) Fixed bug# 3314 - Escalation time not updated correctly, e. g.
    ticket get's not escalated if one escalation time got solved.
 - (2008/09/25) Updated Chinese translation, thanks to Never Min!
 - (2008/09/24) Fixed bug# 3322 - After updating SysConfig I get: Can't use
    string ("0") as a HASH ref while "strict refs" in use at
    Kernel/System/Config.pm line 716.
 - (2008/09/24) Fixed bug# 3321 - "(" or ")" in user name is braking ldap query
    for agent and customer auth.
 - (2008/09/13) Fixed bug# 3289 - Error when trying to delete an answer (with
    std attachment) in admin interface.
 - (2008/09/12) Fixed bug# 3292 - Missing entries in the generic agent mask if
    a freetext field is configured as pull down menu.
 - (2008/09/11) Fixed bug# 3275 - Kernel::System::EmailParser::CheckMessageBody
    uses undefined $Param{URL}.
 - (2008/09/11) Fixed bug# 3284 - Missing entries in the stats mask if a
    freetext field is configured as pull down menu.
 - (2008/09/10) Fixed bug# 3287 - Possible CSS on login page, in