@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.765 2008-10-01 10:16:10 martin Exp $
+# $Id: CHANGES,v 1.766 2008-10-02 11:19:48 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.0 beta1 (2009/??/??)
+ - (2008/10/02) Added script to move stored attachments from one backend to
+    other backend, e. g. DB -> FS (bin/otrs.ArticleStorageSwitch.pl).
  - (2008/10/02) Added service and sla preferences feature, like already exising
     user, customer and queue preferences. Can be extended by config settings.
  - (2008/10/02) Improved package manager to get info about documentation
